--- a/src/Components/LocationArea/AddressCoordinates/AddressCoordinates.css
+++ b/src/Components/LocationArea/AddressCoordinates/AddressCoordinates.css
@@ -1,23 +1,12 @@
-.title1{
-    border-left: 1px solid #19e8e1;
-    padding-left: 20px;
-    font-size: 22px;
-}
 
-.address{
-    font-weight: 800;
-    margin-right: 20px;
-}
+
 
 .coordContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
+    span:first-of-type {
+        display: block;
+        font-size: 14px;
+    }
 }
-.coorTitle {
-    font-size: 14px;
-}
-
 
 .coorValue{
     font-size: 32px;
