--- a/src/Components/LocationArea/PopularDetails/PopularDetails.css
+++ b/src/Components/LocationArea/PopularDetails/PopularDetails.css
@@ -2,23 +2,30 @@
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
-    height: 70px;
+    height: 60px;
     border: 1px solid #353535;
     border-radius: 15px;
     width: 300px;
     background-color:#353535 ;
+    margin-bottom: 7px;
     p {
-        display: flex;
-        flex-direction: column;
+        margin: 5px 0;
 
     }
 
     p > span:first-of-type {
+        display: block;
         font-size: 16px;
+        margin-bottom: -5px;
     }
-    p> span:last-of-type{
+    
+    p > span:last-of-type{
         font-size: 12px;
         color: #6C63FF;
+    }
+    
+    p:last-of-type{
+        text-align: center;
     }
     
 }
