clean up - global url - handling server responses

--- a/src/Components/LocationArea/AddressCoordinates/AddressCoordinates.css
+++ b/src/Components/LocationArea/AddressCoordinates/AddressCoordinates.css
@@ -5,8 +5,12 @@
     }
 }
 
-.coorValue{
+.coorValue {
     font-size: 32px;
-    color: #6C63FF;
+    color: var(--third-font-color);
     font-weight: 900;
+}
+
+.noCoord {
+    text-align: center;
 }
