--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,13 @@
   font-family: Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  --primary-font-color: #989898;
+  --secondary-font-color: white;
+  --third-font-color: #6C63FF;
+  --primary-btn-bg: #E01E4C;
+  --secondary-btn-bg: #6C63FF;
+  --btn-font-color: white;
+  --borders-color: #D9D9D9;
 }
 
 #root {
@@ -19,8 +25,3 @@ body {
   min-height: 100vh;
   box-sizing: border-box;
 }
-
-
-
-
-
