--- a/src/Components/HomeArea/App/App.css
+++ b/src/Components/HomeArea/App/App.css
@@ -3,33 +3,35 @@
     width: 320px;
     padding: 10px;
   }
+
   label {
     font-size: 16px;
-    color: #989898;
+    color: var(--primary-font-color);
   }
+
   input {
     width: 83%;
     max-width: 320px;
     padding: 1.2em 1.7em;
-    border: 1px solid #D9D9D9;
+    border: 1px solid var(--borders-color);
     border-radius: 10px;
     background-color: white;
     font-size: 16px;
     margin-top: 10px
   }
-  hr{
-    border: none; 
-    border-top: 3px dashed #D9D9D9; 
-    margin: 30px auto ;
-    width: 150px; 
-   
+
+  hr {
+    border: none;
+    border-top: 3px dashed var(--borders-color);
+    margin: 30px auto;
+    width: 150px;
   }
-  
+
   button {
     width: 100%;
     padding: 1.2em 2em;
-    background-color: #E01E4C;
-    color: white;
+    background-color: var(--primary-btn-bg);
+    color: var(--btn-font-color);
     border: none;
     border-radius: 5px;
     font-size: 16px;
@@ -37,6 +39,4 @@
     box-shadow: 0 4px 10px rgba(233, 30, 99, 0.3);
     transition: background-color 0.3s ease;
   }
-  
-  
 }
